--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,6 @@
 flask==2.1.3            
 flask-sqlalchemy==2.5.1
-spacy==3.3.1
+spacy==3.4.0
 tensorflow-cpu==2.10.0
 pandas==1.4.3
 numpy==1.23.1
@@ -9,3 +9,4 @@ Flask-SocketIO==5.2.0
 python-engineio==4.3.3
 python-socketio==5.7.1
 simple-websocket==0.7.0
+psycopg2
