--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,120 @@
-flask==2.1.3            
-flask-sqlalchemy==2.5.1
-spacy==3.4.0
-tensorflow-cpu==2.10.0
-pandas==1.4.3
-numpy==1.23.1
-nltk==3.7
-Flask-SocketIO==5.2.0
-python-engineio==4.3.3
-python-socketio==5.7.1
-simple-websocket==0.7.0
-psycopg2==2.8.6
+# This file may be used to create an environment using:
+# $ conda create --name <env> --file <this file>
+# platform: win-64
+absl-py=1.2.0=pypi_0
+astunparse=1.6.3=pypi_0
+bidict=0.21.2=pyhd3eb1b0_0
+blas=1.0=mkl
+bottleneck=1.3.5=py39h080aedc_0
+brotlipy=0.7.0=py39h2bbff1b_1003
+ca-certificates=2022.07.19=haa95532_0
+cachetools=5.2.0=pypi_0
+catalogue=2.0.7=py39haa95532_0
+certifi=2022.6.15=py39haa95532_0
+cffi=1.15.1=py39h2bbff1b_0
+charset-normalizer=2.0.4=pyhd3eb1b0_0
+click=8.0.4=py39haa95532_0
+colorama=0.4.5=py39haa95532_0
+cryptography=37.0.1=py39h21b164f_0
+cymem=2.0.6=py39hd77b12b_0
+cython-blis=0.7.7=py39h080aedc_0
+dataclasses=0.8=pyh6d0b6a4_7
+flask=2.1.3=py39haa95532_0
+flask-socketio=5.2.0=pypi_0
+flask-sqlalchemy=2.5.1=pyhd3eb1b0_0
+flatbuffers=2.0.7=pypi_0
+gast=0.4.0=pypi_0
+google-auth=2.11.0=pypi_0
+google-auth-oauthlib=0.4.6=pypi_0
+google-pasta=0.2.0=pypi_0
+greenlet=1.1.1=py39hd77b12b_0
+grpcio=1.49.0=pypi_0
+gunicorn=20.1.0=pypi_0
+h11=0.13.0=pypi_0
+h5py=3.7.0=pypi_0
+idna=3.3=pyhd3eb1b0_0
+importlib-metadata=4.12.0=pypi_0
+intel-openmp=2021.4.0=haa95532_3556
+itsdangerous=2.0.1=pyhd3eb1b0_0
+jinja2=3.0.3=pyhd3eb1b0_0
+joblib=1.1.0=pyhd3eb1b0_0
+keras=2.10.0=pypi_0
+keras-preprocessing=1.1.2=pypi_0
+krb5=1.19.2=h5b6d351_0
+langcodes=3.3.0=pyhd3eb1b0_0
+libclang=14.0.6=pypi_0
+libpq=12.9=hb652d5d_3
+markdown=3.4.1=pypi_0
+markupsafe=2.1.1=py39h2bbff1b_0
+mkl=2021.4.0=haa95532_640
+mkl-service=2.4.0=py39h2bbff1b_0
+mkl_fft=1.3.1=py39h277e83a_0
+mkl_random=1.2.2=py39hf11a4ad_0
+murmurhash=1.0.7=py39hd77b12b_0
+nltk=3.7=pyhd3eb1b0_0
+numexpr=2.8.3=py39hb80d3ca_0
+numpy=1.23.1=py39h7a0a035_0
+numpy-base=1.23.1=py39hca35cd5_0
+oauthlib=3.2.1=pypi_0
+openssl=1.1.1q=h2bbff1b_0
+opt-einsum=3.3.0=pypi_0
+packaging=21.3=pyhd3eb1b0_0
+pandas=1.4.3=py39hd77b12b_0
+pathy=0.6.1=py39haa95532_0
+pip=22.1.2=py39haa95532_0
+preshed=3.0.6=py39h6c2663c_0
+protobuf=3.19.5=pypi_0
+psycopg2=2.8.6=py39hcd4344a_2
+pyasn1=0.4.8=pypi_0
+pyasn1-modules=0.2.8=pypi_0
+pycparser=2.21=pyhd3eb1b0_0
+pydantic=1.9.0=py39h2bbff1b_1
+pyopenssl=22.0.0=pyhd3eb1b0_0
+pyparsing=3.0.9=py39haa95532_0
+pysocks=1.7.1=py39haa95532_0
+python=3.9.13=h6244533_1
+python-dateutil=2.8.2=pyhd3eb1b0_0
+python-engineio=4.3.3=pypi_0
+python-socketio=5.7.1=pypi_0
+pytz=2022.1=py39haa95532_0
+regex=2022.7.9=py39h2bbff1b_0
+requests=2.28.1=py39haa95532_0
+requests-oauthlib=1.3.1=pypi_0
+rsa=4.9=pypi_0
+setuptools=63.4.1=py39haa95532_0
+shellingham=1.3.1=pyhd3eb1b0_0
+simple-websocket=0.7.0=pypi_0
+six=1.16.0=pyhd3eb1b0_1
+smart_open=5.2.1=py39haa95532_0
+spacy=3.3.1=py39h0f1f7c2_0
+spacy-legacy=3.0.9=py39haa95532_0
+spacy-loggers=1.0.1=pyhd3eb1b0_0
+sqlalchemy=1.4.39=py39h2bbff1b_0
+sqlite=3.39.2=h2bbff1b_0
+srsly=2.4.3=py39hd77b12b_0
+tensorboard=2.10.0=pypi_0
+tensorboard-data-server=0.6.1=pypi_0
+tensorboard-plugin-wit=1.8.1=pypi_0
+tensorflow-cpu=2.10.0=pypi_0
+tensorflow-estimator=2.10.0=pypi_0
+tensorflow-intel=2.10.0=pypi_0
+tensorflow-io-gcs-filesystem=0.27.0=pypi_0
+termcolor=2.0.1=pypi_0
+thinc=8.0.15=py39h757b272_0
+tqdm=4.64.0=py39haa95532_0
+typer=0.4.1=py39haa95532_0
+typing-extensions=4.3.0=py39haa95532_0
+typing_extensions=4.3.0=py39haa95532_0
+tzdata=2022c=h04d1e81_0
+urllib3=1.26.11=py39haa95532_0
+vc=14.2=h21ff451_1
+vs2015_runtime=14.27.29016=h5e58377_2
+wasabi=0.9.1=py39haa95532_0
+werkzeug=2.2.2=pypi_0
+wheel=0.37.1=pyhd3eb1b0_0
+win_inet_pton=1.1.0=py39haa95532_0
+wincertstore=0.2=py39haa95532_2
+wrapt=1.14.1=pypi_0
+wsproto=1.2.0=pypi_0
+zipp=3.8.1=pypi_0
+zlib=1.2.12=h8cc25b3_3
