--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,9 @@
-# This file may be used to create an environment using:
-# $ conda create --name <env> --file <this file>
-# platform: win-64
 absl-py==1.2.0
 astunparse==1.6.3
 bidict==0.21.2
-blas==1.0
-bottleneck==1.3.5
-brotlipy==0.7.0=py39h2bbff1b_1003
-ca-certificates==2022.07.19
+blis==0.7.7
+Bottleneck==1.3.5
+brotlipy==0.7.0
 cachetools==5.2.0
 catalogue==2.0.7
 certifi==2022.6.15
@@ -17,15 +13,13 @@ click==8.0.4
 colorama==0.4.5
 cryptography==37.0.1
 cymem==2.0.6
-cython-blis==0.7.7
-dataclasses==0.8
-flask==2.1.3
-flask-socketio==5.2.0
-flask-sqlalchemy==2.5.1
+Flask==2.1.3
+Flask-SocketIO==5.2.0
+Flask-SQLAlchemy==2.5.1
 flatbuffers==2.0.7
 gast==0.4.0
 google-auth==2.11.0
-google-auth-oauthlib==0.4.
+google-auth-oauthlib==0.4.6
 google-pasta==0.2.0
 greenlet==1.1.1
 grpcio==1.49.0
@@ -34,29 +28,23 @@ h11==0.13.0
 h5py==3.7.0
 idna==3.3
 importlib-metadata==4.12.0
-intel-openmp==2021.4.0
 itsdangerous==2.0.1
-jinja2==3.0.3
+Jinja2==3.0.3
 joblib==1.1.0
 keras==2.10.0
-keras-preprocessing==1.1.2
-krb5==1.19.2
+Keras-Preprocessing==1.1.2
 langcodes==3.3.0
 libclang==14.0.6
-libpq==12.9
-markdown==3.4.1
-markupsafe==2.1.1
-mkl==2021.4.0
+Markdown==3.4.1
+MarkupSafe==2.1.1
+mkl-fft==1.3.1
+mkl-random==1.2.2
 mkl-service==2.4.0
-mkl_fft==1.3.1
-mkl_random==1.2.2
 murmurhash==1.0.7
 nltk==3.7
 numexpr==2.8.3
 numpy==1.23.1
-numpy-base==1.23.1
 oauthlib==3.2.1
-openssl==1.1.1q
 opt-einsum==3.3.0
 packaging==21.3
 pandas==1.4.3
@@ -69,9 +57,10 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.21
 pydantic==1.9.0
-pyopenssl==22.0.0
+pygame==2.1.0
+pyOpenSSL==22.0.0
 pyparsing==3.0.9
-pysocks==1.7.1
+PySocks==1.7.1
 python-dateutil==2.8.2
 python-engineio==4.3.3
 python-socketio==5.7.1
@@ -84,35 +73,30 @@ setuptools==63.4.1
 shellingham==1.3.1
 simple-websocket==0.7.0
 six==1.16.0
-smart_open==5.2.1
+smart-open==5.2.1
 spacy==3.3.1
 spacy-legacy==3.0.9
 spacy-loggers==1.0.1
-sqlalchemy==1.4.39
-sqlite==3.39.2
+SQLAlchemy==1.4.39
 srsly==2.4.3
 tensorboard==2.10.0
 tensorboard-data-server==0.6.1
 tensorboard-plugin-wit==1.8.1
 tensorflow-cpu==2.10.0
 tensorflow-estimator==2.10.0
-tensorflow-intel==2.10.0
+tensorflow_intel==2.10.0
 tensorflow-io-gcs-filesystem==0.27.0
 termcolor==2.0.1
 thinc==8.0.15
 tqdm==4.64.0
 typer==0.4.1
-typing-extensions==4.3.0
-tzdata==2022c
+typing_extensions==4.3.0
 urllib3==1.26.11
-vc==14.2
-vs2015_runtime==14.27.29016
 wasabi==0.9.1
-werkzeug==2.2.2
+Werkzeug==2.2.2
 wheel==0.37.1
-win_inet_pton==1.1.0
+win-inet-pton==1.1.0
 wincertstore==0.2
 wrapt==1.14.1
 wsproto==1.2.0
 zipp==3.8.1
-zlib==1.2.12
