--- a/requirements.txt
+++ b/requirements.txt
@@ -1,96 +1,13 @@
-absl-py==1.2.0
-astunparse==1.6.3
-bidict==0.21.2
-blis==0.7.7
-Bottleneck==1.3.5
-brotlipy==0.7.0
-cachetools==5.2.0
-catalogue==2.0.7
-certifi==2022.6.15
-cffi==1.15.1
-charset-normalizer==2.0.4
-click==8.0.4
-colorama==0.4.5
-cryptography==37.0.1
-cymem==2.0.6
-Flask==2.1.3
-Flask-SocketIO==5.2.0
-Flask-SQLAlchemy==2.5.1
-flatbuffers==2.0.7
-gast==0.4.0
-google-auth==2.11.0
-google-auth-oauthlib==0.4.6
-google-pasta==0.2.0
-greenlet==1.1.1
-grpcio==1.49.0
-gunicorn==20.1.0
-h11==0.13.0
-h5py==3.7.0
-idna==3.3
-importlib-metadata==4.12.0
-itsdangerous==2.0.1
-Jinja2==3.0.3
-joblib==1.1.0
-keras==2.10.0
-Keras-Preprocessing==1.1.2
-langcodes==3.3.0
-libclang==14.0.6
-Markdown==3.4.1
-MarkupSafe==2.1.1
-mkl-fft==1.3.1
-mkl-random==1.2.2
-mkl-service==2.4.0
-murmurhash==1.0.7
-nltk==3.7
-numexpr==2.8.3
-numpy==1.23.1
-oauthlib==3.2.1
-opt-einsum==3.3.0
-packaging==21.3
+flask==2.1.3            
+flask-sqlalchemy==2.5.1
+spacy==3.3.1
+tensorflow-cpu==2.10.0
 pandas==1.4.3
-pathy==0.6.1
-pip==22.1.2
-preshed==3.0.6
-protobuf==3.19.5
-psycopg2==2.8.6
-pyasn1==0.4.8
-pyasn1-modules==0.2.8
-pycparser==2.21
-pydantic==1.9.0
-pygame==2.1.0
-pyOpenSSL==22.0.0
-pyparsing==3.0.9
-PySocks==1.7.1
-python-dateutil==2.8.2
+numpy==1.22.3
+nltk==3.7
+Flask-SocketIO==5.2.0
 python-engineio==4.3.3
 python-socketio==5.7.1
-pytz==2022.1
-regex==2022.7.9
-requests==2.28.1
-requests-oauthlib==1.3.1
-rsa==4.9
-setuptools==63.4.1
-shellingham==1.3.1
 simple-websocket==0.7.0
-six==1.16.0
-smart-open==5.2.1
-spacy==3.3.1
-spacy-legacy==3.0.9
-spacy-loggers==1.0.1
-SQLAlchemy==1.4.39
-srsly==2.4.3
-tensorflow-cpu==2.10.0
-termcolor==2.0.1
-thinc==8.0.15
-tqdm==4.64.0
-typer==0.4.1
-typing_extensions==4.3.0
-urllib3==1.26.11
-wasabi==0.9.1
-Werkzeug==2.2.2
-wheel==0.37.1
-win-inet-pton==1.1.0
-wincertstore==0.2
-wrapt==1.14.1
-wsproto==1.2.0
-zipp==3.8.1
+simple-websocket==0.7.0
+psycopg2==2.8.6
