--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,9 @@
 flask==2.1.3            
 flask-sqlalchemy==2.5.1
-tensorflow-cpu==2.6.0
+spacy==3.2.1
+tensorflow-cpu==2.8.0
 pandas==1.4.3
-numpy==1.19.2
+numpy==1.22.3
 python-engineio==4.3.3
 python-socketio==5.7.1
 simple-websocket==0.7.0
