--- a/.dockerignore
+++ b/.dockerignore
@@ -1,11 +1,16 @@
 # Default ignored files
 /shelf/
 /workspace.xml
+.git
+.idea
+.ipynb_checkpoints
 __pycache__
+create_lookup
 data/processed_text
 data/questions
 data/raw_text
 data/tables
+
 polish_articles_urls.txt
 tfidf.py
 preprocess_data.py
@@ -18,10 +23,11 @@ models/Spacy_lg
 models/mimic/mimic_large
 models/mimic/mimic_medium
 models/slot_filer/slot_none
-models/slot_filer/slot_mimic/slot_mimic_medium.h5
-models/slot_filer/slot_mimic/slot_mimic_medium_history
-models/slot_filer/slot_mimic/slot_mimic_small_history
+models/slot_filer/slot_ones
+models/slot_filer/slot_mimic
+models/slot_filler/mimic_ls9.h5
 models/CountVectorizer
 preprocess
 data_logs
 tests
+.gitignore
